# m5-historical-extractor

./: README.md  pyproject.toml
mt5server/: comm.py  main.py
