[tool.poetry]
name = "historical-stock-extractor"
version = "0.1.0"
description = "StockPriceDataServer"
authors = ["Paulo Rodrigues <paulorodriguesxv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
MetaTrader5 = "^5.0.36"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
